--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 #############
-## DataBase
+## Zeste de Savoir
 #############
 base.db
-
-
-#############
-## SASS Cache
-#############
 .sass-cache/
+/static
+/tutoriels-private
+/tutoriels-public
+/media
 
 
 #############
@@ -225,8 +224,3 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
-/static
-/tutoriels-private
-/tutoriels-public
-/media
-/assets
