Update gitignore for articles

--- a/.gitignore
+++ b/.gitignore
@@ -219,8 +219,11 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+
+# Root directories on the project
 /static
 /tutoriels-private
 /tutoriels-public
 /media
 /assets
+/articles-data
