Revert "Merge master (Fix old merge fail)"
This reverts commit 8bba4f5a57b84c85f7a5c8530066037675d6de19.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 #############
-## DataBase
+## Zeste de Savoir
 #############
 base.db
+.sass-cache/
+/static
+/tutoriels-private
+/tutoriels-public
+/media
 
 
 #############
