--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fabric==1.8.0
 django>=1.5,<1.6
 bleach==1.2.2
 pygments
+coverage==3.7.1
 south
 pytz==2013d
 pillow==2.0.0
@@ -24,3 +25,5 @@ lxml
 pygal
 httplib2
 pysolr
+factory-boy==2.2.1
+django-discover-runner==0.4
