--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "2.7"
 install:
   - "sudo apt-get update"
+  - "sudo apt-get install texlive"
+  - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
   - "cd scripts && ./UseUpdatedGitPython.sh && cd .."
