--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pytz==2013d
 PyYAML==3.10
 defusedxml
 django-dynamic-fixture
-crispy-forms-foundation==0.2.3
+crispy-forms-foundation==0.3.2
 django-crispy-forms==1.3.2
 django-simple-captcha
 django-email-obfuscator
@@ -27,5 +27,5 @@ factory-boy==2.2.1
 django-discover-runner==0.4
 pygeoip==0.3.1
 pillow
-git+https://github.com/zeste-de-savoir/Python-ZMarkdown.git@2.4-zds.2.1
-git+https://github.com/firm1/GitPython.git@0.3.2-RC1.z2
+git+https://github.com/zestedesavoir/Python-ZMarkdown.git@2.4-zds.2.4
+git+https://github.com/zestedesavoir/GitPython.git@0.3.2-RC1.z2
