--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-dynamic-fixture
 crispy-forms-foundation==0.3.2
 django-crispy-forms==1.3.2
 django-simple-captcha
-django-email-obfuscator
+django-email-obfuscator==0.1.2
 django-debug-toolbar
 django-pipeline
 djangorestframework
