--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@ python:
   - "2.7"
 install:
   - "sudo apt-get update"
+  - "sudo apt-get install --reinstall ttf-mscorefonts-installer"
   - "sudo apt-get install texlive"
   - "sudo apt-get install texlive-xetex"
+  - "sudo apt-get install texlive-lang-french"
   - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
 script: 
   - python manage.py test
   - coverage run --source='.' manage.py test
+  - flake8 --exclude=migrations,urls.py --max-line-length=120 --ignore=F403
 after_success:
   - coveralls
