--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ install:
   - "sudo apt-get install texlive"
   - "sudo apt-get install texlive-xetex"
   - "sudo apt-get install texlive-lang-french"
+  - "sudo apt-get install texlive-wallpaper"
   - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
 script: 
   - python manage.py test
   - coverage run --source='.' manage.py test
-  - flake8 --exclude=migrations,urls.py --max-line-length=120 --ignore=F403
+  - flake8 --exclude=migrations,urls.py --max-line-length=120 --ignore=F403 zds
 after_success:
   - coveralls
