--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - "sudo apt-get install texlive"
   - "sudo apt-get install texlive-xetex"
   - "sudo apt-get install texlive-lang-french"
-  - "sudo apt-get install texlive-wallpaper"
+  - "sudo apt-get install texlive-latex-extra"
   - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
