--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "2.7"
 install:
   - "sudo apt-get update"
-  - "sudo apt-get install --reinstall ttf-mscorefonts-installer"
+  - "echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections"
+  - "sudo apt-get install ttf-mscorefonts-installer"
   - "sudo apt-get install texlive"
   - "sudo apt-get install texlive-xetex"
   - "sudo apt-get install texlive-lang-french"
