--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 install:
   - "sudo apt-get update"
+  - "dpkg-reconfigure debconf"
   - "echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections"
   - "sudo apt-get install ttf-mscorefonts-installer"
   - "sudo apt-get install texlive"
