--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - "sudo apt-get install haskell-platform"
   - "sudo cabal update"
   - "sudo cabal install pandoc"
-  - "sudo export PATH=$PATH:~/.cabal/bin"
+  - "export PATH=$PATH:~/.cabal/bin"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
 script: 
