--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - "export PATH=$PATH:~/.cabal/bin"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
+  - "pip install coveralls"
 script: 
   - python manage.py test
   - coverage run --source='.' manage.py test
