--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
+  - "pip install coveralls"
 script: 
   - python manage.py test
   - coverage run --source='.' manage.py test
