--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
 install:
+  - "sudo add-apt-repository ppa:wasta-linux/wasta-testing -y"
   - "sudo apt-get update"
   - "sudo echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections"
   - "sudo apt-get install ttf-mscorefonts-installer"
@@ -9,10 +10,7 @@ install:
   - "sudo apt-get install texlive-xetex"
   - "sudo apt-get install texlive-lang-french"
   - "sudo apt-get install texlive-latex-extra"
-  - "sudo apt-get install haskell-platform"
-  - "sudo cabal update"
-  - "sudo cabal install pandoc"
-  - "export PATH=$PATH:~/.cabal/bin"
+  - "sudo apt-get install pandoc"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
   - "pip install coveralls"
