mise à jour du ppa

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - "sudo add-apt-repository ppa:wasta-linux/wasta-testing -y"
   - "sudo apt-get update"
+  - "sudo apt-get upgrade"
   - "sudo echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections"
   - "sudo apt-get install ttf-mscorefonts-installer"
   - "sudo apt-get install texlive"
