amélioration de la vitesse de travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ install:
   - "sudo apt-get install texlive-xetex"
   - "sudo apt-get install texlive-lang-french"
   - "sudo apt-get install texlive-latex-extra"
-  - "sudo apt-get install haskell-platform"
-  - "sudo cabal update"
-  - "sudo cabal install pandoc"
-  - "export PATH=$PATH:~/.cabal/bin"
+  - "sudo mkdir -p ~/cabal/bin"
+  - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/18967337/pandoc"
+  - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
+  - "export PATH=$PATH:~/cabal/bin"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
   - "pip install coveralls"
