--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ install:
   - "sudo apt-get install texlive-lang-french"
   - "sudo apt-get install texlive-latex-extra"
   - "sudo mkdir -p ~/cabal/bin"
+  - "sudo mkdir -p ~/cabal/bin/templates"
   - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/18967337/pandoc"
+  - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
+  - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
   - "export PATH=$PATH:~/cabal/bin"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
