--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - "sudo wget -P ./templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
   - "sudo wget -P ./templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
+  - "sudo pandoc -v"
   - "export PATH=$PATH:~/cabal/bin"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
