--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - "sudo wget -P ./templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
   - "export PATH=$PATH:~/cabal/bin"
-  - "sudo pandoc -v"
+  - "sudo ~/cabal/bin/pandoc --version"
   - "sudo apt-get --reinstall install -qq language-pack-fr"
   - "pip install -r requirements.txt"
   - "pip install coveralls"
