--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+git:
+  depth: 1
 language: python
 python:
   - "2.7"
@@ -10,17 +12,17 @@ install:
   - "sudo apt-get install texlive-lang-french"
   - "sudo apt-get install texlive-latex-extra"
   - "sudo mkdir -p ~/cabal/bin"
-  - "sudo mkdir -p ~/templates"
+  - "sudo mkdir -p ~/.pandoc"
   - "sudo mkdir -p ~/cabal/bin/templates"
   - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/18967337/pandoc"
   - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
   - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
   - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
-  - "sudo wget -P ~ https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
-  - "sudo wget -P ~ https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
-  - "sudo wget -P ~/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
-  - "sudo wget -P ~/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
+  - "sudo wget -P ~/.pandoc https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
+  - "sudo wget -P ~/.pandoc https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
+  - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
+  - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
   - "export PATH=$PATH:~/cabal/bin"
   - "sudo ~/cabal/bin/pandoc --version"
