--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,10 @@ install:
   - "sudo apt-get install texlive-latex-extra"
   - "sudo mkdir -p ~/cabal/bin"
   - "sudo mkdir -p ~/.pandoc"
-  - "sudo mkdir -p ~/cabal/bin/templates"
-  - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/18967337/pandoc"
-  - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
-  - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
-  - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
-  - "sudo wget -P ~/cabal/bin/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
-  - "sudo wget -P ~/.pandoc https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
-  - "sudo wget -P ~/.pandoc https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
   - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
   - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
+  - "sudo touch ~/.pandoc/epub.css"
+  - "sudo touch ~/.pandoc/templates/epub.css"
   - "sudo chmod u+x,g+x,o+x ~/cabal/bin/pandoc"
   - "export PATH=$PATH:~/cabal/bin"
   - "sudo ~/cabal/bin/pandoc --version"
