--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
   - "sudo mkdir -p ~/.pandoc"
   - "sudo mkdir -p /opt/zdsenv/logs"
   - "sudo touch /opt/zdsenv/logs/pandoc.log"
+  - "sudo chmod -R 777 /opt/zdsenv/logs"
+  - "sudo chmod 666 /opt/zdsenv/logs/pandoc.log"
   - "sudo wget -P ~/cabal/bin https://dl.dropboxusercontent.com/u/18967337/pandoc"
   - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.epub"
   - "sudo wget -P ~/.pandoc/templates https://dl.dropboxusercontent.com/u/14517385/dev/default.html"
