--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "gulp-rename": "^1.2.0",
     "gulp-size": "^0.3.1",
     "gulp-uglify": "^0.3.0",
-    "jshint-stylish": "^0.2.0",
-    "tiny-lr": "0.0.7"
+    "jshint-stylish": "^0.2.0"
   }
 }
