Update des instructions d'update dans le README pour npm/gulp

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "gulp test",
     "postinstall": "bower install",
+    "postupdate": "bower install",
     "travis": "gulp travis"
   },
   "repository": {
