--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-minify-css": "^0.3.4",
     "gulp-newer": "^0.3.0",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.2",
     "gulp-size": "^0.3.1",
     "gulp-uglify": "^0.3.0",
     "jshint-stylish": "^0.2.0"
