(Re)mise en place des sprites (via gulp.spritesmith)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ base.db
 /assets/images/sprite*.png
 /assets/.sass-css
 /assets/bower_components
+/assets/scss/_sprite.scss
 
 #############
 ## Python
