--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-sass": "^0.7.2",
     "gulp-size": "^0.3.1",
     "gulp-uglify": "^0.3.0",
+    "gulp.spritesmith": "^1.1.0",
     "jshint-stylish": "^0.2.0"
   }
 }
