--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-sass": "^0.7.2",
     "gulp-size": "^0.3.1",
     "gulp-uglify": "^0.3.0",
+    "gulp-zip": "^0.3.4",
     "gulp.spritesmith": "^1.1.0",
     "jshint-stylish": "^0.2.0"
   }
